== Release 0.1.0 (May 10, 2011)

* #log_entries takes :match and :ignore regexp options

* Minor performance improvements

== Release 0.0.3 (May 6, 2011)

* Fixed bug from 0.0.2 in Ruby 1.8 where browser versions never got parsed

== Release 0.0.2 (May 6, 2011)

* Fixed detection for some versions of Windows XP and Opera

* Added detection for Windows 8, Fedora, Slackware, FreeBSD, BlackBerry, Konqueror, Epiphany

* Added parsing tests for each detectable OS and browser

* Misc. minor internal refactoring and bug fixes

== Release 0.0.1 (April 30, 2011) **

* Initial release