@@ -12,10 +12,10 @@ module DoubleAgent
   end
 
   # For the given "things", returns the share of the group that each attr has.
-  # 
   # "things" is an array of objects who's classes "include DoubleAgent::Resource".
-  # 
-  # "attrs" is one or more method symbols from DoubleAgent::Resource.
+  # "args" is one or more method symbols from DoubleAgent::Resource.
+  # "args" may have, as it's last member, :threshold => n, where n is the lowest
+  # percentage you want returned.
   # 
   # Example, Browser Family share:
   # DoubleAgent.percentages_for(logins, :browser_family)
@@ -24,10 +24,11 @@ module DoubleAgent
   # Example, Browser/OS share, asking for symbols back:
   # DoubleAgent.percentages_for(server_log_entries, :browser_sym, :os_sym)
   #   [[:firefox, :windows_7, 50.4], [:chrome, :osx, 19.6], [:msie, :windows_xp, 15], [:safari, :osx, 10], [:other, :other, 5]]
-  def self.percentages_for(things, *attrs)
+  def self.percentages_for(things, *args)
+    options = args.last.is_a?(Hash) ? args.pop : {} # Break out options
     p = {}
     things.each do |h|
-      syms = attrs.map { |attr| h.send attr }
+      syms = args.map { |attr| h.send attr }
       p[syms] = 0 unless p.has_key? syms
       p[syms] += 1
     end
@@ -39,6 +40,7 @@ module DoubleAgent
       p.collect! { |k,n| [*k.<<(((n * 100) / size).round(2))] }
     end
     p.sort! { |a,b| b.last <=> a.last }
+    p.reject! { |a| a.last < options[:threshold] } if options[:threshold]
     p
   end
 end
